# pyt-funda

./: pyproject.toml
app/: math_ops.py
pytest_fundamentals.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  good-practices.txt  test_custom.py
tests/unit/: test_math_ops.py  unittest-mock.py
