[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-fundamentals"
version = "0.1.0"
description = "Practice app for pytest"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["app"]  # tells setuptools to treat ./app as a package
